finition: Update documentation for KPI and wildcards
